<resources>
    <string name="app_name">UARK App Directory</string>
    <string name="app_title">UARK Directory</string>

    <!-- Strings for the BrowseDirectoryActivity -->
    <string name="browse_directory_title">Directory</string>
    <string name="browse_directory_button">Browse Directory</string>
    <string name="directory_list_item_title_dev_seperator_text">" by "</string>


    <!-- Strings for the ListingActivity -->
    <string name="listing_app_name">App Name</string>
    <string name="listing_app_version_prefix">"v "</string>
    <string name="listing_app_version">v x.x.x</string>
    <string name="listing_developer_prefix">"By: "</string>
    <string name="listing_developer">By: Developer</string>
    <string name="listing_download_button">Download</string>

    <string name="listing_description_title">Description</string>
    <string name="listing_description_box_placeholder">"Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua."</string>
    <string name="base_uri">http://uaf132856.ddns.uark.edu</string>
    <string name="get_all_apps">/UarkDirectory/request/app/getAllApps</string>
    <string name="png_extension">.png</string>
    <string name="apk_extension">.apk</string>

</resources>
