<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="edu.uark.csce.pizzaparty.uark_directory.ListingActivity">

    <!-- Top pannel -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"

        android:background="#F3F3F3">
        <!-- TODO: remove background color -->

        <!-- Left side of the top pannel-->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/app_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/listing_app_name"
                    android:paddingRight="15dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/listing_app_version_prefix"/>
                <TextView
                    android:id="@+id/app_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/listing_app_version"/>

            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/listing_developer_prefix" />
                <TextView
                    android:id="@+id/app_developer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/listing_developer" />
            </LinearLayout>
        </LinearLayout>

        <!-- Right side of top pannel -->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:background="#B9B9B9">
            <!-- TODO: remove background -->

            <ImageView
                android:id="@+id/listing_app_thumbnail"
                android:layout_width="115dp"
                android:layout_height="115dp"
                android:background="@drawable/placeholder"/>
            <Button
                android:id="@+id/listing_download_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listing_download_button"
                android:layout_below="@+id/listing_app_thumbnail"
                />
        </RelativeLayout>
    </LinearLayout>




</LinearLayout>
